--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,30 @@
 						<br>(343) 598-8649</a></p>
 		          </div>
 	          </div>
+			  
 	        </div>
+			<div class="row block-9">
+				<div class="col-md-6 d-flex">
+				  <form action="https://formspree.io/f/xeqbonnp" method="POST" class="bg-light p-5 contact-form">
+					<div class="form-group">
+					  <input type="text" class="form-control" name="Name" placeholder="Nom">
+					</div>
+					<div class="form-group">
+					  <input type="text" class="form-control" name="Email" placeholder="Email">
+					</div>
+					<div class="form-group">
+					  <input type="text" class="form-control" name="Subject" placeholder="Sujet">
+					</div>
+					<div class="form-group">
+					  <textarea name="" id="" cols="30" rows="7" class="form-control" name="Message" placeholder="Message"></textarea>
+					</div>
+					<div class="form-group">
+					  <input type="submit" value="Envoyer le message" style="color: black;" class="btn btn-primary py-3 px-5">
+					</div>
+				  </form>
+				
+				</div>
+  			  </div>
 	        <br>
 	      </div>
 	    </section>
